Fix prod deployment: resolve MockRedisUtil and config issues
- Change 4 classes from injecting MockRedisUtil to RedisUtil (MockRedisUtil
  is only available when wsh.redis.mock=true, not in prod)
- Fix application-prod.yml: use Docker service names directly instead of
  unresolvable env var placeholders
- Add Flyway repair config for failed migration recovery

--- a/wsh-miniapp/src/manifest.json
+++ b/wsh-miniapp/src/manifest.json
@@ -6,7 +6,7 @@
   "versionCode": "100",
   "transformPx": false,
   "mp-weixin": {
-    "appid": "wxxxxxxxxxxx",
+    "appid": "wxd34a73fd1f1a4f6b",
     "setting": {
       "urlCheck": false,
       "minified": true,
