--- a/wsh-backend/wsh-service/src/main/resources/application-prod.yml
+++ b/wsh-backend/wsh-service/src/main/resources/application-prod.yml
@@ -4,15 +4,18 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DB_HOST}:${DB_PORT:3306}/${DB_NAME:wsh_prod}?useUnicode=true&characterEncoding=utf8mb4&useSSL=true&serverTimezone=Asia/Shanghai
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: jdbc:mysql://mysql:3306/wsh_prod?useUnicode=true&characterEncoding=utf8mb4&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+    username: wsh_app
+    password: ${MYSQL_PASSWORD:wsh@2026!App}
   data:
     redis:
-      host: ${REDIS_HOST}
-      port: ${REDIS_PORT:6379}
-      password: ${REDIS_PASSWORD}
+      host: redis
+      port: 6379
+      password: ${REDIS_PASSWORD:wsh@2026!Redis}
       database: 0
+  flyway:
+    clean-on-validation-error: false
+    repair: true
 
 # 生产环境：关闭 SQL 日志
 mybatis-plus:
@@ -34,17 +37,17 @@ springdoc:
 # 微信配置（从环境变量注入）
 wsh:
   jwt:
-    secret: ${JWT_SECRET}
+    secret: ${WSH_JWT_SECRET:wsh-coupon-bar-jwt-secret-key-please-change-in-production-2024}
   wechat:
-    app-id: ${WECHAT_APP_ID}
-    app-secret: ${WECHAT_APP_SECRET}
-    mch-id: ${WECHAT_MCH_ID}
-    api-v3-key: ${WECHAT_API_V3_KEY}
-    private-key-path: ${WECHAT_PRIVATE_KEY_PATH}
-    serial-number: ${WECHAT_SERIAL_NUMBER}
-    notify-url: ${WECHAT_NOTIFY_URL}
+    app-id: ${WSH_WECHAT_APPID:wxd34a73fd1f1a4f6b}
+    app-secret: ${WSH_WECHAT_SECRET:your-wechat-secret}
+    mch-id: ${WSH_WECHAT_PAY_MCHID:}
+    api-v3-key: ${WSH_WECHAT_PAY_KEY:}
+    private-key-path: ${WECHAT_PRIVATE_KEY_PATH:}
+    serial-number: ${WECHAT_SERIAL_NUMBER:}
+    notify-url: ${WECHAT_NOTIFY_URL:}
   cos:
-    secret-id: ${COS_SECRET_ID}
-    secret-key: ${COS_SECRET_KEY}
+    secret-id: ${COS_SECRET_ID:}
+    secret-key: ${COS_SECRET_KEY:}
     region: ${COS_REGION:ap-guangzhou}
-    bucket: ${COS_BUCKET}
+    bucket: ${COS_BUCKET:}
